Git_WGBH_QC/src/objects/Bios__c.object
<CustomObject>
    <fields>
        <fullName>First_Interest_Applied_via__c</fullName>
        <label>First Interest Applied via</label>
        <picklist>
            <picklistValues>
                <fullName>Pledge Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail Copy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Attendance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Telephone Conversation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Face to Face Conversation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Screening by Volunteers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift Transaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pledge Transaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benefit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catalog Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership Clubs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telemarketing Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interaction Record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic Screening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Poll/Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peer Identified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self-Identified</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Foundation_Assets__c</fullName>
        <label>Foundation Assets</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Foundation_Name__c</fullName>
        <label>Foundation Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Genre_Count__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Genre Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Genre__c</fullName>
        <label>Genre</label>
        <picklist>
            <controllingField>Interest_Topic__c</controllingField>
            <picklistValues>
                <fullName>Aging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ancient &amp; Classical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Animals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antiques &amp; Collectibles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archeaology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arts &amp; Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Astronomy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biography &amp; Profiles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biology &amp; Chemistry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birthday Parties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business &amp; Economy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caregiving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civilizations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications &amp; Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Earth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy &amp; Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enlightenment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Film &amp; Television</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fine Arts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fitness &amp; Nutrition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Folk Art &amp; Crafts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forensics &amp; Investigations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fun &amp; Games</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gift_Amount__c</fullName>
        <label>Gift Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Household__c</fullName>
        <label>Household</label>
        <referenceTo>Household__c</referenceTo>
        <relationshipLabel>Bios</relationshipLabel>
        <relationshipName>Bios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <referenceTo>Industry__c</referenceTo>
        <relationshipName>Bios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Intensity_Indicator__c</fullName>
        <formula>IMAGE (CASE( Intensity__c, &quot;Hot&quot;, &quot;/img/samples/light_green.gif&quot;, &quot;Warm&quot;, &quot;/img/samples/light_yellow.gif&quot;, &quot;Cold&quot;, &quot;/img/samples/light_red.gif&quot;, &quot;/s.gif&quot;), &quot;status color&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Intensity Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intensity__c</fullName>
        <label>Intensity</label>
        <picklist>
            <picklistValues>
                <fullName>Hot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>InterestValue__c</fullName>
        <formula>LEFT(
IF(INCLUDES(Interest__c,&apos;1&apos;),&apos;1, &apos;,&apos;&apos;) +
IF(INCLUDES(Interest__c,&apos;2&apos;),&apos;2, &apos;,&apos;&apos;) +
IF(INCLUDES(Interest__c,&apos;3&apos;),&apos;3, &apos;,&apos;&apos;)
,
LEN(
IF(INCLUDES(Interest__c,&apos;1&apos;),&apos;1, &apos;,&apos;&apos;) +
IF(INCLUDES(Interest__c,&apos;2&apos;),&apos;2, &apos;,&apos;&apos;) +
IF(INCLUDES(Interest__c,&apos;3&apos;),&apos;3, &apos;,&apos;&apos;)
)-2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InterestValue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest_Category__c</fullName>
        <label>Interest Category</label>
        <picklist>
            <picklistValues>
                <fullName>Programming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitive Insight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lifestyle/Hobby</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interest_Count__c</fullName>
        <description>Number of times this interest has been applied.</description>
        <inlineHelpText>Number of times this interest has been applied.</inlineHelpText>
        <label>Interest Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interest_Description_Type__c</fullName>
        <label>Interest Description Type</label>
        <picklist>
            <controllingField>Interest_Description__c</controllingField>
            <picklistValues>
                <fullName>89.7 e-newsletter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>89.7 FM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>89.7 WGBH Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>99.5 All Classical Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>99.5 e-newsletter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>99.5 FM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Animation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antiques</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architecture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Art</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Art Collecting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ballet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ballroom Dancing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bargain Hunters/Discount Shoppers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baseball</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basketball</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Big Band/Swing performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biography/Autobiography</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boating/Sailing: Boats</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Comedy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business/Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cape &amp; Islands Area Local Interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cape and Islands Web page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caribbean Islands</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interest_Description__c</fullName>
        <label>Interest Description</label>
        <picklist>
            <picklistValues>
                <fullName>Animals/Birds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Causes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>How To</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Music</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newsletter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Programming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Streaming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interest</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interest_Detail_Text__c</fullName>
        <label>Interest Detail Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest_Level_1__c</fullName>
        <label>Interest Level 1</label>
        <picklist>
            <picklistValues>
                <fullName>Arts &amp; Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Culture &amp; Society</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>History</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home &amp; How-to</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>News &amp; Public Affairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Science &amp; Nature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interest_Level_2__c</fullName>
        <label>Interest Level 2</label>
        <picklist>
            <picklistValues>
                <fullName>Aging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ancient &amp; Classical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Animals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antiques &amp; Collectibles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archeaology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arts &amp; Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Astronomy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biography &amp; Profiles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biology &amp; Chemistry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birthday Parties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business &amp; Economy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caregiving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civilizations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications &amp; Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Earth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy &amp; Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enlightenment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Film &amp; Television</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fine Arts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fitness &amp; Nutrition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Folk Art &amp; Crafts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forensics &amp; Investigations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fun &amp; Games</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interest_Status__c</fullName>
        <label>Interest Status</label>
        <picklist>
            <picklistValues>
                <fullName>Implied</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interest_Topic__c</fullName>
        <label>Topic</label>
        <picklist>
            <picklistValues>
                <fullName>Arts &amp; Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Culture &amp; Society</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>History</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home &amp; How-to</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>News &amp; Public Affairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Science &amp; Nature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interest__c</fullName>
        <label>Interest Detail</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Job_Function__c</fullName>
        <label>Job Function</label>
        <picklist>
            <picklistValues>
                <fullName>C Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EVP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SVP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attorney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managing Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Likelihood_Score__c</fullName>
        <label>Likelihood Score</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_Recently_Applied__c</fullName>
        <label>Most Recently Applied</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Action for Boston Community Development, Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Red Cross of Massachusetts Bay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arnold Arboretum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bell - Building Educated Leaders for Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston Children&apos;s Museum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston Community Capital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston Historical Society and Museum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston History Collaborative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston National Historic Park</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston Preservation Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston Public Library</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston Symphony Orchestra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston Youth Symphony Orchestra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston Vegetarian Soceity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boys and Girls Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boys and Girls Clubs of Boston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cam Neely Foundation for a Cancer Cure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Center for Democracy and Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Citizens for Limited Taxation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coalition for Buzzards Bay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Common Cause Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commonwealth Museum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Servings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concord Museum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cradles to Crayons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dimock Community Health Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dreams of Freedom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Families First Parenting Programs</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Recipient__c</fullName>
        <label>New Recipient</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nominated_By__c</fullName>
        <label>Nominated By</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_del__c</fullName>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Bios1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <picklist>
            <picklistValues>
                <fullName>Board of Directors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co-Chair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emeritus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secretary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Treasurer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trustee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vice Chair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Former Member</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Program_Show__c</fullName>
        <label>Program/Show</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Program Interests</relationshipLabel>
        <relationshipName>Bios</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>